--- a/iap/refunding-payments.mdx
+++ b/iap/refunding-payments.mdx
@@ -6,7 +6,7 @@ icon: 'rotate-left'
 
 You can refund a one-time or non-subscription purchase made by a customer, or the most recent payment of a customer's subscription.
 
-Refunding returns the funds to the customer's payment method (it can take a few days for the payment to be returned, depending on the payment method and the customer's bank). When a refund is made, the customer immediately loses access to any entitlements associated with their subscription, or purchased item.
+Refunding returns the funds to the customer's payment method (it can take a few days for the payment to be returned, depending on the payment method and the customer's bank). When a refund is made, the customer immediately loses access to any entitlements associated with their subscription or purchased item.
 
 <Note>
 **No Refund for Subscriptions with Billing Issues**
@@ -23,4 +23,4 @@ To refund a payment:
 3. Click on the "..." menu next to the subscription
 4. Select "Refund"
 
-The refund will be processed immediately, and the customer's `CustomerInfo` will be updated to reflect the change in entitlement status.
+The refund will be processed immediately, and the customer's entitlements will be updated to reflect the change. The `isActive` property on the affected `Entitlement` will be set to `false`, and the corresponding `ZSTransaction` status will change to `.refunded`.
